--- a/package.json
+++ b/package.json
@@ -30,19 +30,18 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@reduxjs/toolkit": "^1.5.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.3",
     "notistack": "^1.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
-    "redux": "^4.0.5",
-    "typescript": "^3.7.5"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.20",
     "@types/marked": "^2.0.0",
     "@types/node": "^14.14.35",
