--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux": "^4.0.5"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
